# testCatDashboardTast

beck-app/: env  main.py  pyproject.toml
beck-app/api/routers/: router.py  schemas.py
beck-app/core/: config.py  db_helper.py
beck-app/core/models/: base.py  create_tables_method.py  mission.py  spy_cat.py  target.py
beck-app/core/services/: service.py
front/spy-cat-dashboard/: README.md  package-lock.json  package.json
front/spy-cat-dashboard/src/app/: globals.css  layout.tsx  page.tsx
front/spy-cat-dashboard/src/app/components/: CatForm.tsx  CatList.tsx  EditCatModal.tsx  types.ts
