[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
pydantic = {extras = ["email"], version = "^2.11.3"}
pydantic-settings = "^2.9.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
apscheduler = "^3.11.0"
asyncpg = "^0.30.0"
alembic = "^1.15.2"
aiohttp = "^3.11.18"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"